--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -122,6 +122,19 @@ jobs:
       uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@issue/NEST-338
 
     - name: Replace Media
+      run: |
+        Set-AzureWebAppStorageContentFromStorage `
+          -ResourceGroupName ${{ inputs.resource-group-name }}`
+          -WebAppName  ${{ inputs.app-name }} `
+          -SourceSlotName ${{ inputs.source-slot-name }} `
+          -DestinationSlotName ${{ inputs.destination-slot-name }} `
+          -ConnectionStringName ${{ inputs.storage-connection-string-name }} `
+          -ContainerBlackList ${{ inputs.container-exclude-list }} `
+          -ContainerWhiteList ${{ inputs.container-white-list }} `
+          -FolderBlackList ${{ inputs.folder-exclude-list }} `
+          -FolderWhiteList ${{ inputs.folder-white-list }}
+
+    - name: Replace Media
       # v1.1.0
       uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
       with:
