--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -35,6 +35,7 @@ runs:
       shell: pwsh
       run: |
         Set-Output "friendly-build-directory-name" "${{ inputs.build-directory }}".Replace("/", "__")
+        Set-Output "runner-suffix" "${{ runner.os }}-${{ runner.arch }}-${{ runner.name }}"
         
         if (${{ inputs.ui-test-parallelism }} -eq -1)
         {
@@ -67,7 +68,7 @@ runs:
       # We don't need additional conditions, because of the "if-no-files-found" setting.
       if: success() || failure()
       with:
-        name: ui-test-failure-dump-${{ steps.setup.outputs.friendly-build-directory-name }}-${{ runner.name }}
+        name: ui-test-failure-dump-${{ steps.setup.outputs.friendly-build-directory-name }}-${{ steps.setup.outputs.runner-suffix }}
         path: |
           ${{ inputs.build-directory }}/FailureDumps/
           test.out
@@ -78,7 +79,7 @@ runs:
       uses: phoenix-actions/test-reporting@1e9b578818d03d6df50ce8e60d024a000bf3ab63
       if: (success() || failure()) && (github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false)
       with:
-        name: Test Results (${{inputs.build-directory}}|${{ runner.name }})
+        name: Test Results (${{inputs.build-directory}}|${{ steps.setup.outputs.runner-suffix }}
         path: '${{inputs.build-directory}}/**/*.trx'
         reporter: dotnet-trx
         fail-on-error: 'false'
