--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -126,6 +126,14 @@ jobs:
       uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
       with:
         inlineScript: |
+          az resource list --resource-group ${{ inputs.resource-group-name }}
+        azPSVersion: latest
+
+    - name: Stop Web App Slot
+      # v1.1.0
+      uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
+      with:
+        inlineScript: |
           Stop-AzWebAppSlot `
             -ResourceGroupName ${{ inputs.resource-group-name }} `
             -Name ${{ inputs.app-name }} `
