--- a/.github/workflows/verify-submodule-pull-request.yml
+++ b/.github/workflows/verify-submodule-pull-request.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Prefix PR
+    - name: Ensure Prefix PR
       uses: Lombiq/GitHub-Actions/.github/actions/prefix-pr@issue/OSOE-425
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
