--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -110,7 +110,10 @@ jobs:
         timeout-minutes:
         - ${{ inputs.timeout-minutes }}
     timeout-minutes: ${{ matrix.timeout-minutes }}
-    steps:      
+    steps:
+    - name: Initialize PowerShell modules
+      uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@issue/NEST-338
+
     - name: Login to Azure
       # v1.4.5
       uses: azure/login@24848bc889cfc0a8313c2b3e378ac0d625b9bc16
@@ -118,18 +121,15 @@ jobs:
         creds: ${{ secrets.AZURE_APP_SERVICE_RESET_SERVICE_PRINCIPAL }}
         enable-AzPSSession: true
 
-    - name: Initialize PowerShell modules
-      uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@issue/NEST-338
-
     - name: Stop Web App Slot
       # v1.1.0
       uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
       with:
         inlineScript: |
-          Stop-AzWebAppSlot `
+          Stop-AzureWebAppSlot `
             -ResourceGroupName ${{ inputs.resource-group-name }} `
-            -Name ${{ inputs.app-name }} `
-            -Slot ${{ inputs.destination-slot-name }}
+            -WebAppName ${{ inputs.app-name }} `
+            -SlotName ${{ inputs.destination-slot-name }}
         azPSVersion: latest
 
     - name: Replace Media
@@ -209,10 +209,10 @@ jobs:
       uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
       with:
         inlineScript: |
-          Start-AzWebAppSlot `
+          Start-AzureWebAppSlot `
             -ResourceGroupName ${{ inputs.resource-group-name }} `
-            -Name ${{ inputs.app-name }} `
-            -Slot ${{ inputs.destination-slot-name }}
+            -WebAppName ${{ inputs.app-name }} `
+            -SlotName ${{ inputs.destination-slot-name }}
         azPSVersion: latest
 
     - name: Ping Web App Slot
