--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -8,15 +8,11 @@ on:
       AZURE_APP_SERVICE_PUBLISH_PROFILE:
         required: true
     inputs:
-      # This needs to be stringified JSON because inputs don't support arrays, see 
-      # https://github.community/t/reusable-workflow-with-strategy-matrix/205676/2.
-      machine-types:
+      machine-type:
         required: false
         type: string
-        default: "[\"ubuntu-latest\"]"
-        description: >
-            Stringified JSON array with the name of the type of machine(s) to run the workflow under, e.g.
-            "[\"ubuntu-latest\"]" or "[\"ubuntu-latest\", \"windows-latest\"]".
+        default: "ubuntu-latest"
+        description: The name of the type of machine(s) to run the workflow under.
       dotnet-version:
         required: false
         type: string
@@ -112,19 +108,12 @@ on:
 
 jobs:
   deploy:
-    runs-on: ${{ matrix.machine-type }}
-    name: Deploy to Azure App Service
+    runs-on: ${{ input.machine-type }}
+    name: Reset Environment
     defaults:
       run:
         shell: pwsh
-    # Timeout-minutes is in the matrix only because the config can't be set directly from the inputs, see:
-    # https://github.com/actions/runner/issues/1555.
-    strategy:
-      matrix:
-        machine-type: ${{ fromJson(inputs.machine-types) }}
-        timeout-minutes:
-        - ${{ inputs.timeout-minutes }}
-    timeout-minutes: ${{ matrix.timeout-minutes }}
+    timeout-minutes: ${{ input.timeout-minutes }}
     steps:
     - uses: actions/checkout@v3.1.0
       with:
