--- a/.github/workflows/reset-azure-environment.yml
+++ b/.github/workflows/reset-azure-environment.yml
@@ -165,7 +165,7 @@ jobs:
             -ServiceObjectiveName ${{ inputs.service-objective-name }}
         azPSVersion: latest
 
-    - name: Add destination contained User to destination database
+    - name: Add Destination Contained User to Destination Database
       # v1.1.0
       uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
       with:
@@ -179,7 +179,7 @@ jobs:
             -UserConnectionStringName ${{ inputs.database-connection-string-name }}
         azPSVersion: latest
 
-    - name: Remove source contained User from destination database
+    - name: Remove Source Contained User from Destination Database
       # v1.1.0
       uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
       with:
