--- a/.github/workflows/reset-azure-environment.yml
+++ b/.github/workflows/reset-azure-environment.yml
@@ -108,6 +108,7 @@ jobs:
       uses: azure/login@24848bc889cfc0a8313c2b3e378ac0d625b9bc16
       with:
         creds: ${{ secrets.AZURE_APP_SERVICE_RESET_SERVICE_PRINCIPAL }}
+        enable-AzPSSession: true
 
     - name: Replace Media
       run: |
