--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -75,10 +75,6 @@ on:
         required: true
         type: string
         description: Name of the resource group.
-      url:
-        required: true
-        type: string
-        description: The URL of the web app slot.
       web-project-path:
         required: false
         type: string
@@ -118,9 +114,6 @@ jobs:
     - uses: actions/checkout@v3.1.0
       with:
         submodules: 'recursive'
-
-    - name: Initialize PowerShell modules
-      uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@issue/NEST-338
 
     - name: Set up .NET
       uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@dev
@@ -174,16 +167,15 @@ jobs:
         creds: ${{ secrets.AZURE_APP_SERVICE_DEPLOYMENT_SERVICE_PRINCIPAL }}
         enable-AzPSSession: true
 
+    - name: Initialize PowerShell modules
+      uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@issue/NEST-338
+
     - name: Stop Web App Slot
-      # v1.1.0
-      uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
-      with:
-        inlineScript: |
-          Stop-AzureWebAppSlot `
-            -ResourceGroupName ${{ inputs.resource-group-name }} `
-            -WebAppName ${{ inputs.app-name }} `
-            -SlotName ${{ inputs.slot-name }}
-        azPSVersion: latest
+      run: |
+        Stop-AzureWebAppSlot `
+          -ResourceGroupName ${{ inputs.resource-group-name }} `
+          -WebAppName ${{ inputs.app-name }} `
+          -SlotName ${{ inputs.slot-name }}
 
     - name: Deploy to Azure App Service
       # v2.2.3
@@ -195,15 +187,15 @@ jobs:
         package: ${{ inputs.build-directory }}/Published
 
     - name: Start Web App Slot
-      # v1.1.0
-      uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
-      with:
-        inlineScript: |
-          Start-AzureWebAppSlot `
-            -ResourceGroupName ${{ inputs.resource-group-name }} `
-            -WebAppName ${{ inputs.app-name }} `
-            -SlotName ${{ inputs.slot-name }}
-        azPSVersion: latest
+      run: |
+        Start-AzureWebAppSlot `
+          -ResourceGroupName ${{ inputs.resource-group-name }} `
+          -WebAppName ${{ inputs.app-name }} `
+          -SlotName ${{ inputs.slot-name }}
 
-    - name: Ping Web App Slot
-      run: curl --connect-timeout 100 --retry 3 --retry-delay 15 ${{ inputs.url }}
+    - name: Test Web App Slot
+      run: |
+        Test-AzureWebApp `
+          -ResourceGroupName ${{ inputs.resource-group-name }} `
+          -WebAppName ${{ inputs.app-name }} `
+          -SlotName ${{ inputs.slot-name }}
